# gui-vizkit3d_ocean

./: .gitignore  CMakeLists.txt  manifest.xml
cmake/: Findosg_ocean.cmake
scripts/: underwater_simulator.rb  vizkit3d_ocean.rb
scripts/robots/: GIRONA500ARM5.urdf  flatfish.urdf
scripts/robots/FLATFISH/: collision.STL  flatfish_05.dae  model.config  model.sdf  thruster.dae  visual.STL  visual.dae
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  Main.cpp  SceneModel.cpp  SceneModel.h  SkyDome.cpp  SkyDome.hpp  SphereSegment.cpp  SphereSegment.hpp
test/: CMakeLists.txt  test_Dummy.cpp
viz/: CMakeLists.txt  Ocean.cpp  Ocean.hpp  UnderwaterSimulator.cpp  UnderwaterSimulator.hpp  Vizkit3dOcean.cpp  Vizkit3dOcean.hpp  underwater_simulator-viz.pc.in  vizkit3d_ocean-viz.pc.in  vizkit_plugin.rb
